AM_CXXFLAGS = $(WARN_CXXFLAGS)
AM_CPPFLAGS = $(PROPS_LIB_HEADER)

bin_PROGRAMS = props

props_SOURCES = props.cc
#props_LDFLAGS = -Wl,-Bdynamic
props_LDADD = $(PROPS_LIB_FUNC) 

if HAVE_PTHREAD
    AM_CXXFLAGS += $(PCRE_CFLAGS) $(PTHREAD_CFLAGS) -DHAVE_PTHREADS
    props_LDADD += $(PTHREAD_LIBS)
endif
